# DocGrab

./: .dockerignore  .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  webshell.sqlite3
data/sample_docs/: architecture.md  usage.txt
demo_ui/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
demo_ui/migrations/: 0001_initial.py
demo_ui/templates/demo_ui/: base.html  home.html  ingest.html  query.html
src/rag/: __init__.py  main.py  use_cases.py
src/rag/api/: deps.py  router.py
src/rag/chunkers/: __init__.py  base.py  simple.py
src/rag/config/: settings.py
src/rag/embeddings/: __init__.py  base.py  external_embedder.py  factory.py  hash_embedder.py  local_embedder.py
src/rag/generation/: __init__.py  base.py  external.py  factory.py  grounded.py  local.py  simple.py
src/rag/loaders/: __init__.py  base.py  multi_loader.py  pdf_loader.py  text_loader.py
src/rag/retrieval/: __init__.py  retriever.py
src/rag/schemas/: answer.py  api.py  document.py  retrieval.py
src/rag/scripts/: __init__.py
src/rag/services/: indexing_service.py  query_service.py
src/rag_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/integration/: test_api_flow.py
tests/unit/: test_chroma_store.py  test_chunker.py  test_embedder_factory.py  test_generator_factory.py  test_hash_embedder.py  test_health_route.py  test_pdf_loader.py  test_retriever.py  test_text_loader.py  test_use_cases.py
webshell/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
(+7 files in other folders)
