[project]
name = "rag-mvp"
version = "0.1.0"
description = "A local-first Python RAG MVP with FastAPI and Chroma"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "chromadb==0.5.5",
    "httpx>=0.27.0",
    "pypdf>=5.0.0",
    "pytest>=8.2.0",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3.0.0",
]
local-generation = [
    "transformers>=4.44.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
